--- a/force-app/main/default/classes/AccountsBatch.cls
+++ b/force-app/main/default/classes/AccountsBatch.cls
@@ -1,6 +1,8 @@
+//updating description of all accounts via batch class.
+//getting statistics using stateful.
 public class AccountsBatch implements Database.Batchable<sObject>, Database.stateful{
     integer count = 0;
-  //  1. start method
+  //  1. start method. where we do soql ti fetch all accounts.
   public database.QueryLocator start( Database.BatchableContext bc){
     //soql to fetch records.
     //on account records
